[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/player/model.gltf" type="PackedScene" id=1]
[ext_resource path="res://scenes/player/crosshair.png" type="Texture" id=2]
[ext_resource path="res://scenes/player/player.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=37]

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "Fall-loop"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "Idle-loop"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "Jump"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "Sprint-loop"

[sub_resource type="AnimationNodeTransition" id=32]
input_count = 8
xfade_time = 0.2
input_0/name = "idle"
input_0/auto_advance = false
input_1/name = "walk"
input_1/auto_advance = false
input_2/name = "sprint"
input_2/auto_advance = false
input_3/name = "jump"
input_3/auto_advance = false
input_4/name = "fall"
input_4/auto_advance = false
input_5/name = "walk-left"
input_5/auto_advance = false
input_6/name = "walk-right"
input_6/auto_advance = false
input_7/name = "walk-back"
input_7/auto_advance = false

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "WalkBack-loop"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "WalkLeft-loop"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "WalkRight-loop"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "Walk-loop"

[sub_resource type="AnimationNodeBlendTree" id=7]
graph_offset = Vector2( -533.96, 23.5615 )
nodes/fall/node = SubResource( 34 )
nodes/fall/position = Vector2( -40, 360 )
nodes/idle/node = SubResource( 30 )
nodes/idle/position = Vector2( -40, -120 )
nodes/jump/node = SubResource( 35 )
nodes/jump/position = Vector2( -40, 240 )
nodes/output/position = Vector2( 560, 180 )
nodes/sprint/node = SubResource( 36 )
nodes/sprint/position = Vector2( -40, 120 )
nodes/state/node = SubResource( 32 )
nodes/state/position = Vector2( 340, 180 )
nodes/walk/node = SubResource( 33 )
nodes/walk/position = Vector2( -40, 0 )
nodes/walk-back/node = SubResource( 40 )
nodes/walk-back/position = Vector2( -40, 720 )
nodes/walk-left/node = SubResource( 38 )
nodes/walk-left/position = Vector2( -40, 480 )
nodes/walk-right/node = SubResource( 39 )
nodes/walk-right/position = Vector2( -40, 600 )
node_connections = [ "state", 0, "idle", "state", 1, "walk", "state", 2, "sprint", "state", 3, "jump", "state", 4, "fall", "state", 5, "walk-left", "state", 6, "walk-right", "state", 7, "walk-back", "output", 0, "state" ]

[node name="Player" type="KinematicBody"]
script = ExtResource( 3 )

[node name="Model" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.6, 0, 0, 0, -2.62268e-08, -0.6, 0, 0.6, -2.62268e-08, 0, 0.77, 0 )
shape = SubResource( 37 )

[node name="CameraY" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="CameraX" type="Spatial" parent="CameraY"]

[node name="SpringArm" type="SpringArm" parent="CameraY/CameraX"]
transform = Transform( -1, 2.99004e-08, -8.21506e-08, 0, 0.939693, 0.34202, 8.74228e-08, 0.34202, -0.939693, -0.45, 0.2, 0 )
spring_length = 1.5

[node name="Camera" type="Camera" parent="CameraY/CameraX/SpringArm"]
transform = Transform( 1, 5.32907e-14, -7.10543e-15, 0, 1, 5.96046e-08, 0, -5.96046e-08, 1, 0, 0, 0 )
current = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 7 )
anim_player = NodePath("../Model/AnimationPlayer")
active = true
process_mode = 0
root_motion_track = NodePath("Armature/Skeleton:RootMotion")
parameters/state/current = 0

[node name="Crosshair" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="direction_changed" from="." to="." method="_on_Player_direction_changed"]
[connection signal="state_changed" from="." to="." method="_on_Player_state_changed"]

[editable path="Model"]
